tests/snapshots/constants__regular__ls-targets_es-bindgen.snap
---
source: tests/constants.rs
expression: bo.bindings
---
#![allow(non_snake_case, non_upper_case_globals, non_camel_case_types)]
pub const GLU_BEGIN: u32 = 100100;
pub const GLU_CCW: u32 = 100121;
pub const GL_ADD: u32 = 260;
pub const GL_ALL_ATTRIB_BITS: u32 = 1048575;

